fix: improve spacing on doc site

--- a/docs/src/css/index.css
+++ b/docs/src/css/index.css
@@ -30,7 +30,7 @@ aside,
 section,
 footer {
   margin: 0;
-  padding: 0.5rem;
+  padding: 0.25rem 1rem;
   color: var(--broad-grey);
 }
 
@@ -53,7 +53,7 @@ header {
 }
 
 main {
-  margin-top: 100px;
+  margin-top: 40px;
 }
 
 footer {
